// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph align 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: right;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: center;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

<div>
  <p
    className="c0"
  />
  <p
    className="c1"
  />
  <p
    className="c2"
  />
</div>
`;

exports[`Paragraph color 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: light-0;
  font-weight: normal;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #aabbcc;
  font-weight: normal;
}

<div>
  <p
    className="c0"
  />
  <p
    className="c1"
  />
</div>
`;

exports[`Paragraph css 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
  font-weight: normal;
  background-color: #000;
}

<div>
  <p
    className="c0"
  />
  <p
    className="c0"
  />
</div>
`;

exports[`Paragraph default 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

<div>
  <p
    className="c0"
  />
</div>
`;

exports[`Paragraph margin 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: xs;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: initial;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: xsrem 0 0 0;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 xsrem 0 0;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 xsrem 0;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0 xsrem;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

.c6 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 xsrem 0 xsrem;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

.c7 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: xsrem 0 xsrem 0;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

<div>
  <p
    className="c0"
  />
  <p
    className="c1"
  />
  <p
    className="c2"
  />
  <p
    className="c3"
  />
  <p
    className="c4"
  />
  <p
    className="c5"
  />
  <p
    className="c6"
  />
  <p
    className="c7"
  />
</div>
`;

exports[`Paragraph margin responsive 1`] = `
.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: initial;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: xs;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

@media only screen and (min-width:48rem) {
  .c0 {
    margin: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    margin: md;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    margin: lg;
  }
}

<div>
  <p
    className="c0"
  />
  <p
    className="c1"
  />
</div>
`;

exports[`Paragraph padding 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: xs;
  color: #000000;
  font-weight: normal;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: initial;
  color: #000000;
  font-weight: normal;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: xsrem 0 0 0;
  color: #000000;
  font-weight: normal;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: 0 xsrem 0 0;
  color: #000000;
  font-weight: normal;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: 0 0 xsrem 0;
  color: #000000;
  font-weight: normal;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: 0 0 0 xsrem;
  color: #000000;
  font-weight: normal;
}

.c6 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: 0 xsrem 0 xsrem;
  color: #000000;
  font-weight: normal;
}

.c7 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: xsrem 0 xsrem 0;
  color: #000000;
  font-weight: normal;
}

<div>
  <p
    className="c0"
  />
  <p
    className="c1"
  />
  <p
    className="c2"
  />
  <p
    className="c3"
  />
  <p
    className="c4"
  />
  <p
    className="c5"
  />
  <p
    className="c6"
  />
  <p
    className="c7"
  />
</div>
`;

exports[`Paragraph padding responsive 1`] = `
.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: initial;
  color: #000000;
  font-weight: normal;
}

.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: xs;
  color: #000000;
  font-weight: normal;
}

@media only screen and (min-width:48rem) {
  .c0 {
    padding: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    padding: md;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    padding: lg;
  }
}

<div>
  <p
    className="c0"
  />
  <p
    className="c1"
  />
</div>
`;

exports[`Paragraph size 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: xs;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

<div>
  <p
    className="c0"
  />
</div>
`;

exports[`Paragraph size responsive 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: xs;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: initial;
  text-align: left;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
  font-weight: normal;
}

@media only screen and (min-width:48rem) {
  .c0 {
    font-size: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    font-size: md;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    font-size: lg;
  }
}

<div>
  <p
    className="c0"
  />
  <p
    className="c1"
  />
</div>
`;
